# fishmael-core

./: .gitignore  Cargo.toml  fishmael.toml
fishmael-cache/: Cargo.toml
fishmael-cache-core/: Cargo.toml
fishmael-cache-core/src/: hargs.rs  lib.rs
fishmael-cache-derive/: Cargo.toml
fishmael-cache-derive/src/: lib.rs
fishmael-cache/src/: cmd.rs  guild.rs  interaction.rs  lib.rs
fishmael-cache/src/interaction/: command_interaction.rs  component_interaction.rs  mod.rs
fishmael-gateway/: Cargo.toml
fishmael-gateway/src/: close_code.rs  deserialize.rs  error.rs  event.rs  lib.rs  message.rs  poll_event.rs
fishmael-model/: Cargo.toml
fishmael-model/src/: channel.rs  guild.rs  intents.rs  lib.rs  member.rs  role.rs  snowflake.rs  util.rs  visitor.rs
fishmael-model/src/event/: guild_create.rs  identify.rs  mod.rs  ready.rs  resume.rs
src/: lib.rs  main.rs  models.rs
src/models/: channel.rs  event.rs  events.rs  guild.rs  guilds.rs  member.rs  snowflake.rs  user.rs  users.rs  util.rs
src/models/event/: guild_create.rs  identify.rs  mod.rs  ready.rs
testbot/: Cargo.toml
testbot/src/: main.rs
