[package]
name = "fishmael"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.88"
dotenv = "0.15.0"
futures = "0.3.30"
redis = { version = "0.27.0", features = ["tokio-comp"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "sync"] }
tokio-macros = "2.4.0"
tokio-tungstenite = { version = "0.23.1", features = ["rustls"] }
