[package]
name = "fishmael-cache-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.83"
bitflags = { version = "2.6.0", default-features = false, features = ["serde"] }
itertools = "0.13.0"
redis = { version = "0.27.2", features = ["tokio-comp"] }

fishmael-model = { version = "0.1.0", path = "../fishmael-model", features = ["redis"] }
