[package]
name = "fishmael-cache"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.88"
async-trait = "0.1.83"
itertools = "0.13.0"
redis = { version = "0.27.0", features = ["tokio-comp"] }
serde = { version = "1.0.210", default-features = false, features = ["derive", "std"] }
twilight-model = "0.15.4"

fishmael-cache-core = { version = "0.1.0", path = "../fishmael-cache-core" }
fishmael-cache-derive = { version = "0.1.0", path = "../fishmael-cache-derive" }
