[package]
name = "fishmael-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.88"
futures = "0.3.30"
futures-core = { version = "0.3.30", default-features = false, features = ["std"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive", "std"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-webpki-roots"] }
tokio-rustls = { version = "^0.26.0" }

twilight-model = "0.15.4"
