[package]
name = "fishmael-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.6.0", default-features = false, features = ["serde"] }
serde = { version = "1.0.210", default-features = false, features = ["derive", "std"] }
