[package]
name = "fishmael-model"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
redis = ["dep:redis"]

[dependencies]
bitflags = { version = "2.6.0", default-features = false, features = ["serde"] }
redis = { version = "0.27.0", features = ["tokio-comp"], optional=true }
serde = { version = "1.0.210", default-features = false, features = ["derive", "std"] }
